<resources>
    <string name="app_name">Spotz</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="explore">Explore</string>
    <string name="map">Map</string>
    <string name="groups">Groups</string>
    <string name="profile">Profile</string>
    <string name="notification">Notification</string>
    <string name="settings">Settings</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="title_activity_maps_fragment">Map</string>
    <string name="go">Go</string>
    <string name="view">View</string>
    <string name="cancel">Cancel</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="name">Username</string>
    <string name="new_event">New Event</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="event_title">Event Title</string>
    <string name="spublic">Public</string>
    <string name="done">Done</string>
    <string name="tag">* tag</string>
    <string name="invitation">You\'ve Been Invited to:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sign_out">sign out</string>
    <string name="search">Search</string>
    <string name="add_this_person">Add this person as a friend?</string>
    <string name="dates">Dates</string>
    <string name="all">All</string>
    <string name="saved">Saved</string>
    <string name="new_tag">New Tag</string>
    <string name="ok">ok</string>
    <string name="friends">Friends</string>
    <string name="sprivate">Private</string>
    <string name="change_profile_pic">Change Profile Picture</string>
    <string name="write_a_comment">Write a Comment</string>
    <string name="delete">Delete</string>
    <string name="invite_friends_through_email">Invite Friends Through Email</string>
    <string name="untitled">Untitled</string>
    <string name="rsvp">RSVP:</string>
</resources>
