<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single" android:id="@+id/menu_top">
        <item
            android:id="@+id/nav_explore"
            android:icon="@drawable/ic_gallery"
            android:title="@string/explore" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:title="@string/map" />
        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/ic_people"
            android:title="@string/groups" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_notif"
            android:icon="@drawable/ic_notifications"
            android:title="@string/notification"
            />
    </group>

    <group android:checkableBehavior="single" android:id="@+id/menu_bottom">

        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings"
            android:icon="@drawable/ic_settings"/>

    </group>

</menu>
