<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:id="@+id/cHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_this_person"
        android:textSize="18sp"
        android:textColor="#505050"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
       <TextView
           android:id="@+id/cNo"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:text="@string/no"
           android:textSize="23sp"
           android:textColor="@color/colorNegative"
           android:gravity="center"/>
        <TextView
            android:id="@+id/cYes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/yes"
            android:textSize="23sp"
            android:textColor="@color/colorPositive"
            android:gravity="center"/>
    </LinearLayout>
</LinearLayout>