<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.spotz2share.spotz.LoginActivity"
    android:background="@color/colorPrimary"
    android:id="@+id/lView">

    <FrameLayout
        android:id="@+id/lContainer"
        android:layout_height="match_parent"
        android:layout_width="match_parent" >


    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        >

        <EditText
            android:id="@+id/lEmail"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:focusableInTouchMode="true"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:fontFamily="sans-serif"
            android:backgroundTint="#fff"
            android:textSize="18sp"
            />

        <EditText
            android:id="@+id/lPass"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:focusableInTouchMode="true"
            android:hint="@string/password"
            android:imeActionId="@+id/login"
            android:inputType="textPassword"
            android:layout_marginTop="20dp"
            android:maxLines="1"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:fontFamily="sans-serif"
            android:backgroundTint="#fff"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:id="@+id/loginBtn"
            android:layout_marginTop="40dp"
            android:textSize="18sp"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textColor="@color/colorPrimary"
            android:background="#fff"
            android:fontFamily="sans-serif"

            />
        <TextView
            android:text="@string/register"
            android:textColor="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registerBtn"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:textSize="16sp"

            />

        <ProgressBar
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/lProgress"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:visibility="gone"
            />
    </LinearLayout>


    </FrameLayout>


</android.support.design.widget.CoordinatorLayout>
