<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invitation"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:padding="10dp"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/pop_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="23sp"
            android:padding="20dp"
            android:gravity="center"

            />
        <TextView
            android:id="@+id/pop_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:paddingBottom="20dp"
            android:gravity="center"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/pop_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:textColor="#fff"
            android:textSize="20sp"
            android:padding="20dp"
            android:gravity="center"
            android:layout_weight="1"
            android:background="@color/colorNegative"
            />
        <TextView
            android:id="@+id/pop_yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:textColor="#fff"
            android:textSize="20sp"
            android:padding="20dp"
            android:gravity="center"
            android:layout_weight="1"
            android:background="@color/colorPositive"

            />
    </LinearLayout>

</LinearLayout>