<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/gradient"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    <TextView
        android:id="@+id/pop_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:textSize="23sp"
        android:layout_centerVertical="true"
        android:padding="30dp"
        android:gravity="center"
        />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#fff"
        android:layout_marginBottom="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

       >

        <TextView
            android:id="@+id/pop_cancel"
            android:text="@string/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:layout_weight="1"
            android:textSize="18sp"
            android:gravity="center"
            android:padding="5dp"/>
        <TextView
            android:id="@+id/pop_view"
            android:text="@string/view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:layout_weight="1"
            android:textSize="18sp"
            android:gravity="center"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/pop_go"
            android:text="@string/go"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:layout_weight="1"
            android:textSize="18sp"
            android:gravity="center"
            android:padding="5dp"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/pop_cam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_camera"
            android:padding="20dp"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

</LinearLayout>